# image_buffer

./: Cargo.toml  LICENSE-MIT  README.md
src/: buffer.rs  lib.rs  math.rs  traits.rs
src/color_model/: alpha.rs  cie.rs  gray.rs  mod.rs  rgb.rs
